--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8085
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/certification
+spring.datasource.username=postgres
+spring.datasource.password=123456
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
+#exibir os comandos no console
+spring.jpa.show-sql=true
