--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8085
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/certification
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/certification
+spring.datasource.username=certification
 spring.datasource.password=123456
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
 #exibir os comandos no console
